# dataclass-rest

./: .ruff.toml  .travis.yml  README.md  async_example.py  base.py  example.py  jsonrpc_example.py  new_example.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  vkapi_example.py
.github/workflows/: setup.yml
dataclass_rest/: __init__.py  aiohttp.py  async_base.py  base.py  base_client.py  boundmethod.py  call_transform.py  client_protocol.py  common.py  decorators.py  errors.py  http_request.py  jsonrpc.py  method.py  methodspec.py  parse_func.py  requests.py  rest.py  rest_helpers.py  sync.py  sync_base.py  sync_client.py
dataclass_rest/http/: aiohttp.py  requests.py
dataclass_rest/json_rpc/: __init__.py  client.py  decorators.py
examples/: async_example.py  example.py  json_rpc.py  pydantic_model.py  vkapi_example.py  with_protocol.py
src/dataclass_rest/: __init__.py  base_client.py  boundmethod.py  client_protocol.py  http_request.py  method.py  methodspec.py  parse_func.py  rest.py
src/dataclass_rest/http/: aiohttp.py  requests.py
tests/: test_init.py
tests/requests/: conftest.py  test_callable_url.py  test_factory.py  test_params.py
